--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,12 @@
 
     <string name="hello">Hello World, RestaurantAppActivity!</string>
     <string name="app_name">RestaurantApp</string>
+    <string name="account_log_in">Log into your Restaurant account: </string>
+    <string name="btn_log_in">Log In</string>
+    <string name="hint_email_address">Email Address</string>
+    <string name="hint_password">Password</string>
+    <string name="msg_invalid_credentials">CARFAX did not recognize this email and password. Please try again</string>
+    <string name="msg_network_error">Whoops! Couldn\'t connect at this time. Please try again.</string>
+    <string name="progress_requesting">Requesting. Please wait...</string>
 
 </resources>
