added resources for green and red buttons for tables view

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="table_8">8</string>
     <string name="table_9">9</string>
     <string name="title_menu">Choose menu items</string>
+    <string name="title_tables">Tables</string>
 
 </resources>
