--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="hint_password">Password</string>
     <string name="hint_filter_menu">Filter Menu</string>
     <string name="label_logging_out">Logging out will clear your username and password from this phone.</string>
-    <string name="msg_empty_menu">The menu is empty!</string>
+    <string name="msg_empty_menu"></string>
     <string name="msg_invalid_credentials">CARFAX did not recognize this email and password. Please try again</string>
     <string name="msg_network_error">Whoops! Couldn\'t connect at this time. Please try again.</string>
     <string name="msg_service_unavailable">We\'re sorry, this Restaurant service is temporarily unavailable. Please try again.</string>
