--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="btn_add">Add</string>
     <string name="btn_cancel">Cancel</string>
     <string name="btn_delete">Delete</string>
+    <string name="btn_done">Done</string>
     <string name="btn_finish">Finish</string>
     <string name="btn_log_in">Log In</string>
     <string name="btn_log_out">Log Out</string>
