--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -11,8 +11,10 @@
     <string name="btn_finish">Finish</string>
     <string name="btn_log_in">Log In</string>
     <string name="btn_log_out">Log Out</string>
+    <string name="btn_no">No</string>
     <string name="btn_payment">Payment</string>
     <string name="btn_refresh">Refresh</string>
+    <string name="btn_yes">Yes</string>
     <string name="currency_ron">RON</string>
     <string name="descr_banner">My Restaurant</string>
     <string name="descr_logout_icon">Log out icon</string>
@@ -26,6 +28,7 @@
     <string name="label_logging_out">Logging out will clear your username and password from this phone.</string>
     <string name="label_product_name">Product name: </string>
     <string name="msg_empty_menu"></string>
+    <string name="msg_delete_bill">Are you sure you want to delete it from the order?</string>
     <string name="msg_invalid_credentials">G1-OMS did not recognize this email and password for use of mobile app. Please try again</string>
     <string name="msg_network_error">Whoops! Couldn\'t connect at this time. Please try again.</string>
     <string name="msg_service_unavailable">We\'re sorry, this Restaurant service is temporarily unavailable. Please try again.</string>
